[tool.poetry]
name = "yolo-demo"
version = "0.1.0"
description = ""
authors = ["Iven Winkelmann <winkelmann.iven@gmail.com>"]
readme = "README.md"
packages = [{include = "yolo_demo"}]

[tool.poetry.dependencies]
python = "~3.9"
ultralytics = "^8.0.116"
paho-mqtt = "^1.6.1"
shapely = "^2.0.1"
torch = "^2.0.1"
torchvision = "^0.15.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["I"]